if(MSVC)
  find_package(OpenMP)
  if (OPENMP_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
  endif()
endif()

set(SOURCES ${SOURCES})
set(HEADERS ${HEADERS} ../include/spica.h)

add_subdirectory(renderer)
add_subdirectory(geometry)
add_subdirectory(utils)
add_subdirectory(random)
add_subdirectory(scenes)
add_subdirectory(accel)
add_subdirectory(viewer)

add_library(spica_renderer SHARED ${SOURCES} ${HEADERS})

if (MSVC)
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zi")
  set_property(TARGET spica_renderer APPEND PROPERTY LINK_FLAGS "/DEBUG /PROFILE")
  configure_file(${SPICA_ROOT_DIRECTORY}/template/project.vcxproj.user.in "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/spica_renderer.vcxproj.user" @ONLY)
endif()
